--- a/pom.xml
+++ b/pom.xml
@@ -53,8 +53,10 @@
 			<version>2.13.2</version>
 			<scope>compile</scope>
 		</dependency>
-
-		<!-- Security is causing trouble with graphql at the moment -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
